--- a/node-resume/package.json
+++ b/node-resume/package.json
@@ -6,9 +6,12 @@
     "multer": "^1.4.5-lts.1",
     "sanitize-filename": "^1.6.3"
   },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   }
 }
