--- a/node-resume/package.json
+++ b/node-resume/package.json
@@ -3,14 +3,18 @@
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "form-data": "^4.0.0",
     "multer": "^2.0.0",
     "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "nodemon app.js",
     "start": "node app.js"
   }
