refactor: replace scikit-learn with numpy for cosine similarity

--- a/python-api/requirements.txt
+++ b/python-api/requirements.txt
@@ -8,9 +8,8 @@ PyPDF2==3.0.1
 
 # NLP & ML
 nltk==3.8.1
-numpy==1.24.3  # Compatible with torch 2.6.0 and scikit-learn
+numpy==1.24.3  # Compatible with torch 2.6.0
 pandas==1.5.3
-scikit-learn==1.2.2  # Updated for numpy 1.24.3
 sentence-transformers==3.3.1  # Updated for torch 2.6.0 compatibility
 huggingface-hub==0.26.5       # Required by sentence-transformers (fixed URL construction)
 transformers==4.46.3          # Required by sentence-transformers, updated for torch 2.6.0
