--- a/python-api/pytest.ini
+++ b/python-api/pytest.ini
@@ -1,27 +1,36 @@
 [pytest]
-# Pytest configuration for python-api tests
+# Optimized Pytest Configuration
+# Maintains code quality while improving speed
 
-# Test discovery patterns
+# Test discovery
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Markers for organizing tests
+# Test organization markers
 markers =
-    slow: marks tests as slow (requiring model download)
-    unit: marks tests as unit tests (fast, no external dependencies)
+    slow: marks tests as slow (requiring real BERT model)
+    unit: marks tests as fast unit tests (use mock)
     integration: marks tests as integration tests
 
-# Output options
+# Output options - KEEP WARNINGS VISIBLE
 addopts =
     -v
     --tb=short
     --strict-markers
+    # Show warnings to catch issues early
+    -W default
 
-# Ignore patterns
+# Test paths
 testpaths = tests
 
-# Warnings
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
+# Run only unit tests by default (fast)
+# Use: pytest -m integration  for full test suite
+# Use: pytest -m slow  for tests needing real BERT model
+
+# For even faster execution, install and enable:
+# pip install pytest-xdist pytest-timeout
+# Then uncomment these:
+# -n auto              # Parallel execution (use all CPU cores)
+# --timeout=30         # Kill tests that hang
+# --durations=10       # Show 10 slowest tests
