--- a/python-api/Dockerfile
+++ b/python-api/Dockerfile
@@ -1,58 +1,24 @@
-# Optimized Python API Dockerfile
-# Multi-stage build with aggressive caching
+# Python API Dockerfile
 
-# Stage 1: Base image with dependencies
-FROM python:3.9-slim as python-base
-
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=off \
-    PIP_DISABLE_PIP_VERSION_CHECK=on \
-    PIP_DEFAULT_TIMEOUT=100
-
-# Stage 2: Dependencies builder
-FROM python-base as builder
-
-WORKDIR /build
-
-# Install build dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    g++ \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy only requirements first (better layer caching)
-COPY requirements.txt .
-
-# Install dependencies to a local directory
-RUN pip install --user --no-warn-script-location -r requirements.txt
-
-# Download BERT model during build (cached layer)
-RUN python -c "from sentence_transformers import SentenceTransformer; SentenceTransformer('all-MiniLM-L6-v2')"
-
-# Stage 3: Runtime image
-FROM python-base as runtime
+FROM python:3.9-slim
 
 WORKDIR /app
 
-# Copy dependencies from builder
-COPY --from=builder /root/.local /root/.local
-COPY --from=builder /root/.cache /root/.cache
-
-# Update PATH
-ENV PATH=/root/.local/bin:$PATH
-
-# Install minimal runtime dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy application code (separate layer for better caching)
-COPY config/ ./config/
-COPY utils/ ./utils/
-COPY services/ ./services/
-COPY tests/ ./tests/
-COPY app.py pytest.ini ./
+# Copy requirements file
+COPY requirements.txt .
+
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application code
+COPY . .
 
 # Create non-root user
 RUN useradd -m -u 1001 appuser && \
