feat: add comprehensive testing and documentation

--- a/python-api/pytest.ini
+++ b/python-api/pytest.ini
@@ -20,6 +20,12 @@ addopts =
     --strict-markers
     # Show warnings to catch issues early
     -W default
+    # Parallel execution (use all CPU cores)
+    -n auto
+    # Kill tests that hang after 30 seconds
+    --timeout=30
+    # Show 10 slowest tests
+    --durations=10
 
 # Test paths
 testpaths = tests
