--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,162 +9,169 @@ on:
 
 permissions:
   contents: read
+  checks: write
+  pull-requests: write
   security-events: write
-  actions: read
 
 env:
-  NODE_VERSION: '18.x'
+  NODE_VERSION: '18'
   PYTHON_VERSION: '3.9'
 
 jobs:
-  # Backend Node.js Tests
-  backend-test:
-    name: Backend Tests
+  # Combined Test & Lint Job
+  test:
+    name: Test & Lint
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./node-resume
-    
+    strategy:
+      fail-fast: false
+      matrix:
+        component: [backend, frontend, python-api]
+
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
+
+      # Node.js Backend
+      - name: Setup Node.js (Backend)
+        if: matrix.component == 'backend'
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: ./node-resume/package-lock.json
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run linting
-        run: npm run lint || echo "Linting step skipped - add eslint config"
-      
-      - name: Run tests
-        run: npm test || echo "No tests configured yet"
-      
-      - name: Build backend
-        run: npm run build || echo "No build step configured"
 
-  # Frontend React Tests
-  frontend-test:
-    name: Frontend Tests
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./node-resume/client
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
+      - name: Install & Test (Backend)
+        if: matrix.component == 'backend'
+        working-directory: ./node-resume
+        run: |
+          npm ci
+          npm run lint
+          npm test -- --ci --coverage --testResultsProcessor=jest-junit
+        env:
+          JEST_JUNIT_OUTPUT_DIR: ./test-results
+          JEST_JUNIT_OUTPUT_NAME: junit.xml
+
+      - name: Publish Backend Test Results
+        if: matrix.component == 'backend' && always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: node-resume/test-results/junit.xml
+          check_name: Backend Test Results
+
+      # Node.js Frontend
+      - name: Setup Node.js (Frontend)
+        if: matrix.component == 'frontend'
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: ./node-resume/client/package-lock.json
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run linting
-        run: npm run lint || echo "Linting step skipped"
-      
-      - name: Run tests
-        run: npm test -- --watchAll=false || echo "No tests configured yet"
-      
-      - name: Build frontend
-        run: npm run build
+
+      - name: Install & Test (Frontend)
+        if: matrix.component == 'frontend'
+        working-directory: ./node-resume/client
+        run: |
+          npm ci
+          npm run lint
+          npm test -- --ci --watchAll=false --coverage --testResultsProcessor=jest-junit
+          npm run build
         env:
           CI: false
-      
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-build
-          path: ./node-resume/client/build
-          retention-days: 7
+          JEST_JUNIT_OUTPUT_DIR: ./test-results
+          JEST_JUNIT_OUTPUT_NAME: junit.xml
 
-  # Python API Tests
-  python-api-test:
-    name: Python API Tests
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./python-api
-    
-    steps:
-      - uses: actions/checkout@v4
-      
+      - name: Publish Frontend Test Results
+        if: matrix.component == 'frontend' && always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: node-resume/client/test-results/junit.xml
+          check_name: Frontend Test Results
+
+      # Python API
       - name: Setup Python
+        if: matrix.component == 'python-api'
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt || echo "requirements.txt not found"
-          pip install pytest pytest-cov flake8 pylint
-      
-      - name: Run linting
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || echo "Linting issues found"
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics || echo "Style issues found"
-      
-      - name: Run tests
-        run: |
-          pytest --cov=. --cov-report=xml --cov-report=html || echo "No tests configured yet"
-      
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v4
-        if: success()
-        with:
-          files: ./python-api/coverage.xml
-          flags: python-api
-          name: python-api-coverage
-          fail_ci_if_error: false
+          cache-dependency-path: ./python-api/requirements.txt
 
-  # Security Scanning
-  security-scan:
+      - name: Install & Test (Python)
+        if: matrix.component == 'python-api'
+        working-directory: ./python-api
+        run: |
+          pip install -r requirements.txt pytest pytest-cov flake8
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          pytest --junitxml=test-results/junit.xml --cov=. --cov-report=xml --cov-report=term
+
+      - name: Publish Python Test Results
+        if: matrix.component == 'python-api' && always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: python-api/test-results/junit.xml
+          check_name: Python API Test Results
+
+      - name: Upload Coverage
+        if: always()
+        uses: codecov/codecov-action@v4
+        with:
+          files: |
+            ./node-resume/coverage/coverage-final.json
+            ./node-resume/client/coverage/coverage-final.json
+            ./python-api/coverage.xml
+          flags: ${{ matrix.component }}
+          fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+  # Security Scan (runs in parallel with tests)
+  security:
     name: Security Scan
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Run Trivy vulnerability scanner
+
+      - name: Run Trivy Scanner
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
           scan-ref: '.'
           format: 'sarif'
           output: 'trivy-results.sarif'
-      
-      - name: Upload Trivy results to GitHub Security
+
+      - name: Upload Trivy Results
         uses: github/codeql-action/upload-sarif@v3
-        if: github.event_name == 'push'
+        if: always()
         with:
           sarif_file: 'trivy-results.sarif'
-      
-      - name: Run npm audit (Backend)
+
+      - name: Setup Node.js for Audit
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Run npm Audit
         run: |
-          cd node-resume
-          npm audit --audit-level=high || echo "npm audit found vulnerabilities"
-      
-      - name: Run npm audit (Frontend)
-        run: |
-          cd node-resume/client
-          npm audit --audit-level=high || echo "npm audit found vulnerabilities"
+          cd node-resume && npm audit --audit-level=moderate || true
+          cd client && npm audit --audit-level=moderate || true
 
-  # Build Backend Docker Image
-  build-backend:
-    name: Build Backend Image
+  # Build Docker Images (only on main branch)
+  build-images:
+    name: Build Docker Images
     runs-on: ubuntu-latest
-    needs: [backend-test]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    needs: [test, security]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    strategy:
+      matrix:
+        include:
+          - name: backend
+            context: ./node-resume
+            image: resume-backend
+          - name: frontend
+            context: ./node-resume/client
+            image: resume-frontend
+          - name: python-api
+            context: ./python-api
+            image: resume-python-api
 
     steps:
       - uses: actions/checkout@v4
@@ -178,103 +185,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKER_USERNAME }}/resume-backend
-          tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Backend image
+      - name: Build and Push
         uses: docker/build-push-action@v5
         with:
-          context: ./node-resume
-          file: ./node-resume/Dockerfile
+          context: ${{ matrix.context }}
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/resume-backend:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/resume-backend:buildcache,mode=max
-
-  # Build Frontend Docker Image
-  build-frontend:
-    name: Build Frontend Image
-    runs-on: ubuntu-latest
-    needs: [frontend-test]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKER_USERNAME }}/resume-frontend
           tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./node-resume/client
-          file: ./node-resume/client/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/resume-frontend:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/resume-frontend:buildcache,mode=max
-
-  # Build Python API Docker Image
-  build-python-api:
-    name: Build Python API Image
-    runs-on: ubuntu-latest
-    needs: [python-api-test]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKER_USERNAME }}/resume-python-api
-          tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Python API image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./python-api
-          file: ./python-api/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/resume-python-api:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/resume-python-api:buildcache,mode=max
+            ${{ secrets.DOCKER_USERNAME }}/${{ matrix.image }}:latest
+            ${{ secrets.DOCKER_USERNAME }}/${{ matrix.image }}:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/${{ matrix.image }}:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/${{ matrix.image }}:buildcache,mode=max
