--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,119 @@
-# misc
-.DS_Store
-.env.local
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# SOLID Refactoring Documentation
-docs/solid-refactoring/
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb_checkpoints/
+
+# Python virtual environments
+venv/
+env/
+ENV/
+.venv
+
+# PyTest
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Node.js build outputs
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.*.local
 
 # Logs
+logs/
+*.log
 nginx/logs/
+npm-debug.log*
+yarn-debug.log*
+lerna-debug.log*
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# Uploads directory (temporary files)
+uploads/
+node-resume/uploads/
+*.pdf
+*.doc
+*.docx
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Model cache
+models/
+.cache/
+torch/
+
+# Documentation (generated)
+docs/solid-refactoring/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.old
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# macOS
+.AppleDouble
+.LSOverride
