--- a/node-resume/package.json
+++ b/node-resume/package.json
@@ -3,19 +3,33 @@
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "form-data": "^4.0.0",
+    "express-rate-limit": "^8.2.0",
+    "form-data": "^4.0.4",
+    "helmet": "^8.1.0",
     "multer": "^2.0.0",
-    "sanitize-filename": "^1.6.3"
+    "sanitize-filename": "^1.6.3",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "jest-junit": "^16.0.0",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.4.2",
+    "supertest": "^7.1.4"
   },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "format": "prettier --write \"**/*.js\"",
+    "format:check": "prettier --check \"**/*.js\"",
+    "build": "echo 'No build step required for Node.js backend' && exit 0"
   }
 }
