--- a/python-api/requirements.txt
+++ b/python-api/requirements.txt
@@ -1,15 +1,16 @@
 # Web Framework
-Flask==2.0.1
-Werkzeug==2.0.3  # Flask dependency
-gunicorn==20.1.0
+Flask==3.1.0  # Updated from 3.0.0 (latest stable)
+Werkzeug==3.1.3  # Updated for security fixes
+gunicorn==23.0.0  # Updated from 21.2.0 (performance improvements)
 
 # PDF Processing
-PyPDF2==3.0.1
+# PyPDF2 is deprecated, using pypdf (maintained fork)
+pypdf==5.1.0  # Replaces PyPDF2==3.0.1
 
 # NLP & ML
-nltk==3.8.1
-numpy==1.24.3  # Compatible with torch 2.6.0
-pandas==1.5.3
+nltk==3.9.1  # Updated from 3.8.1
+numpy==1.26.4  # Updated from 1.24.3 (compatible with torch 2.6.0)
+pandas==2.2.3  # Updated from 1.5.3 (major version bump, performance improvements)
 sentence-transformers==3.3.1  # Updated for torch 2.6.0 compatibility
 huggingface-hub==0.26.5       # Required by sentence-transformers (fixed URL construction)
 transformers==4.46.3          # Required by sentence-transformers, updated for torch 2.6.0
@@ -17,16 +18,16 @@ torch==2.6.0                  # Security fix: updated from 2.0.1 (MPS support fo
 tokenizers==0.20.3            # Required for compatibility with transformers 4.46.3
 
 # Development Tools
-pytest==7.4.0
-pytest-xdist==3.3.1   # Parallel test execution
-pytest-timeout==2.1.0 # Test timeout management
-pytest-cov==4.1.0     # Code coverage reporting
-flake8==6.1.0
-python-dotenv==1.0.0
+pytest==8.3.4  # Updated from 7.4.0
+pytest-xdist==3.6.1   # Updated from 3.3.1 - Parallel test execution
+pytest-timeout==2.3.1 # Updated from 2.1.0 - Test timeout management
+pytest-cov==6.0.0     # Updated from 4.1.0 - Code coverage reporting
+flake8==7.1.1  # Updated from 6.1.0
+python-dotenv==1.0.1  # Updated from 1.0.0
 
 # Additional Dependencies
-tqdm==4.65.0           # Required by sentence-transformers
-click==8.0.4           # Flask dependency
-itsdangerous==2.0.1    # Flask dependency
-Jinja2==3.0.3          # Flask dependency
-MarkupSafe==2.0.1      # Jinja2 dependency
+tqdm==4.67.1           # Updated from 4.65.0 - Required by sentence-transformers
+click==8.1.8           # Updated from 8.1.7 - Flask dependency
+itsdangerous==2.2.0    # Updated from 2.1.2 - Flask dependency (security fixes)
+Jinja2==3.1.5          # Updated from 3.1.2 - Flask dependency (security fixes)
+MarkupSafe==3.0.2      # Updated from 2.1.3 - Jinja2 dependency (security fixes)
