--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 # Rate limiting zones
 limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=ml_limit:10m rate=2r/s;  # Stricter limit for ML endpoint
 limit_req_zone $binary_remote_addr zone=general_limit:10m rate=50r/s;
 limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
 
@@ -25,6 +26,17 @@ upstream frontend {
 server {
     listen 80;
     server_name localhost;
+
+    # File upload limits (allow batch uploads of up to 10 resumes @ 10MB each)
+    client_max_body_size 110M;
+    client_body_timeout 120s;
+    client_body_buffer_size 128k;
+
+    # Security headers
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
     # For Let's Encrypt challenge
     location /.well-known/acme-challenge/ {
@@ -58,7 +70,7 @@ server {
 
     # Python ML API
     location /ml/ {
-        limit_req zone=api_limit burst=10 nodelay;
+        limit_req zone=ml_limit burst=5 nodelay;  # Stricter rate limiting for expensive ML operations
         limit_conn conn_limit 5;
 
         proxy_pass http://python_api/;
