--- a/node-resume/package.json
+++ b/node-resume/package.json
@@ -7,8 +7,7 @@
     "form-data": "^4.0.4",
     "helmet": "^8.1.0",
     "multer": "^2.0.0",
-    "sanitize-filename": "^1.6.3",
-    "winston": "^3.18.3"
+    "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
     "eslint": "^9.18.0",
