--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,4 +54,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build Docker Images
-        run: docker-compose build
+        run: docker compose build
