--- a/node-resume/client/package.json
+++ b/node-resume/client/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src",
+    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint src --fix"
   },
   "eslintConfig": {
     "extends": [
